# gba-beyblade-vforce

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  index.html  ld_script.ld  reference.map  reference.s  reference.txt
.github/workflows/: build.yml
1/1/: index.html
1/2/: index.html
1/3/: index.html
1/4/: index.html
1/5/: index.html
1/6/: index.html
1/7/: index.html
1/8/: index.html
2/1/: index.html
2/2/: index.html
2/3/: index.html
2/4/: index.html
2/5/: index.html
2/6/: index.html
2/7/: index.html
2/8/: index.html
3/1/: index.html
3/2/: index.html
3/3/: index.html
3/4/: index.html
3/5/: index.html
3/6/: index.html
3/7/: index.html
3/8/: index.html
4/1/: index.html
4/2/: index.html
4/3/: index.html
4/4/: index.html
4/5/: index.html
4/6/: index.html
4/7/: index.html
4/8/: index.html
5/1/: index.html
5/2/: index.html
5/3/: index.html
5/4/: index.html
5/5/: index.html
5/6/: index.html
5/7/: index.html
5/8/: index.html
6/1/: index.html
6/2/: index.html
6/3/: index.html
6/4/: index.html
6/5/: index.html
6/6/: index.html
6/7/: index.html
6/8/: index.html
7/1/: index.html
7/2/: index.html
7/3/: index.html
7/4/: index.html
7/5/: index.html
7/6/: index.html
7/7/: index.html
7/8/: index.html
asm/: arm1.s  arm2.s  audio0.s  audio1.s  audio2.s  common.inc  crt0.s  data1.s  data10.s  data11.s  data12.s  data3.s  data4.s  data5.s  data6.s  data7.s  data8.s  data9.s  dataA.s  dataB.s  dataC.s
css/: tables.css
data/: palette-807da80.gbapal  palette-823b2bc.gbapal  palette-823bd04.gbapal  palette-825105c.gbapal  palette-82567c8.gbapal  palette-825a44c.gbapal  palette-825abbc.gbapal  palette-825adbc.gbapal  palette-825b3c4.gbapal  palette-825b5c4.gbapal  palette-825dbf0.gbapal  palette-8266460.gbapal  palette-8266660.gbapal  palette-826eb50.gbapal  palette-82725e8.gbapal  palette-8274708.gbapal  palette-82aa764.gbapal  palette-82ab1ac.gbapal  palette-82abbf4.gbapal  palette-82ad084.gbapal  palette-82adacc.gbapal  palette-82ae514.gbapal  palette-82aef5c.gbapal  palette-82af9a4.gbapal  palette-82b03ec.gbapal  palette-82bb948.gbapal  palette-82bfa24.gbapal  palette-82c2f40.gbapal  palette-82c65dc.gbapal  palette-82c90f8.gbapal  palette-82cb628.gbapal  palette-82cb828.gbapal  palette-82cd048.gbapal  palette-82ce7a8.gbapal  palette-82d5aa8.gbapal  palette-82d7208.gbapal  palette-82da068.gbapal  palette-82db7c8.gbapal  palette-82df9c8.gbapal  palette-82e1078.gbapal  (+149 more)
data/1-1/: geometry.s  metadata.s  tilemap-84667a4.bbmap  tilemap-84670c0.bbmap  tilemap-84683e8.bbmap
data/1-2/: geometry.s  metadata.s  tilemap-846e360.bbmap  tilemap-846f38c.bbmap  tilemap-8471cd0.bbmap
data/1-3/: geometry.s  metadata.s  tilemap-8476ac4.bbmap  tilemap-84780f8.bbmap  tilemap-847a7c0.bbmap
data/1-4/: geometry.s  metadata.s  tilemap-847fc10.bbmap  tilemap-8480a90.bbmap  tilemap-8482860.bbmap
data/1-5/: geometry.s  metadata.s  tilemap-8487038.bbmap  tilemap-8488358.bbmap  tilemap-848a7b0.bbmap
data/1-6/: geometry.s  metadata.s  tilemap-848f8c0.bbmap  tilemap-8490f44.bbmap  tilemap-8492dd0.bbmap
data/1-7/: geometry.s  metadata.s  tilemap-8497278.bbmap  tilemap-84982c0.bbmap  tilemap-8499b64.bbmap
data/1-8/: geometry.s  metadata.s  tilemap-849ed80.bbmap  tilemap-84a0204.bbmap  tilemap-84a36bc.bbmap
data/2-1/: geometry.s  metadata.s  tilemap-84ac03c.bbmap  tilemap-84acffc.bbmap  tilemap-84ae7e4.bbmap
data/2-2/: geometry.s  metadata.s  tilemap-84b4a40.bbmap  tilemap-84b6110.bbmap  tilemap-84b8ed8.bbmap
data/2-3/: geometry.s  metadata.s  tilemap-84bed30.bbmap  tilemap-84c0418.bbmap  tilemap-84c3960.bbmap
data/2-4/: geometry.s  metadata.s  tilemap-84ca23c.bbmap  tilemap-84cbab4.bbmap  tilemap-84ce3bc.bbmap
data/2-5/: geometry.s  metadata.s  tilemap-84d4284.bbmap  tilemap-84d5498.bbmap  tilemap-84d79d0.bbmap
data/2-6/: geometry.s  metadata.s  tilemap-84dc7c8.bbmap  tilemap-84ddb60.bbmap  tilemap-84df7dc.bbmap
data/2-7/: geometry.s  metadata.s  tilemap-84e50c0.bbmap  tilemap-84e6bc8.bbmap  tilemap-84e9210.bbmap
data/2-8/: geometry.s  metadata.s  tilemap-84edf2c.bbmap  tilemap-84efbec.bbmap  tilemap-84f25ec.bbmap
data/3-1/: geometry.s  metadata.s  tilemap-84f79dc.bbmap  tilemap-84f9668.bbmap  tilemap-84fca50.bbmap
data/3-2/: geometry.s  metadata.s  tilemap-8505d40.bbmap  tilemap-8506f34.bbmap  tilemap-8508b60.bbmap
data/3-3/: geometry.s  metadata.s  tilemap-850d610.bbmap  tilemap-850de48.bbmap  tilemap-850ec84.bbmap
data/3-4/: geometry.s  metadata.s  tilemap-8511794.bbmap  tilemap-8512ae0.bbmap  tilemap-8514e4c.bbmap
data/3-5/: geometry.s  metadata.s  tilemap-851a018.bbmap  tilemap-851b9d0.bbmap  tilemap-851e388.bbmap
data/3-6/: geometry.s  metadata.s  tilemap-8524a58.bbmap  tilemap-8526640.bbmap  tilemap-8528c28.bbmap
data/3-7/: geometry.s  metadata.s  tilemap-85036ec.bbmap  tilemap-852e1a0.bbmap  tilemap-852f7f4.bbmap  tilemap-8532e6c.bbmap
data/3-8/: geometry.s  metadata.s  tilemap-8539148.bbmap  tilemap-853bd68.bbmap  tilemap-8540500.bbmap
data/4-1/: geometry.s  metadata.s  tilemap-8548adc.bbmap  tilemap-854b20c.bbmap  tilemap-854ec74.bbmap
data/4-2/: geometry.s  metadata.s  tilemap-8557b14.bbmap  tilemap-8559bf8.bbmap  tilemap-855c83c.bbmap
data/4-3/: geometry.s  metadata.s  tilemap-8562970.bbmap  tilemap-85634cc.bbmap  tilemap-8564a4c.bbmap
data/4-4/: geometry.s  metadata.s  tilemap-8567bec.bbmap  tilemap-856a3c8.bbmap  tilemap-856efcc.bbmap
data/4-5/: geometry.s  metadata.s  tilemap-8577da4.bbmap  tilemap-857a66c.bbmap  tilemap-857fdcc.bbmap
data/4-6/: geometry.s  metadata.s  tilemap-8588e78.bbmap  tilemap-858ae68.bbmap  tilemap-858ed70.bbmap
data/4-7/: geometry.s  (+4 more)
scripts/: check-code-formatting.sh  check-git-clang-format.sh  compare.cmake  format.cmake
src/: background.c  bios.c  bios.h  common.h  io_reg.h  irq.c  keystate.c  keystate.h  layer.c  layer.h  libc.c  macro.h  main.c  memory.c  memory.h  ram.c  ram.h  ram2.c  ram3.c  sound.c  sound.h  sprite.c  strings0.c  strings3.c  strings4.c  strings5.c  strings6.c  strings7.c  unsorted.h
(+1565 files in other folders)
